# sparkflow

./: .dockerignore  .gitignore  .user.yml  Dockerfile  Makefile  README.md  config.yaml  dbt_project.yml  env.example  gsheets_runs.yaml  house_bills.tsv  manual_gsheets_upload.py  prefect_schedule.py  profiles.yml  pyproject.toml  pytest.ini  run_pipeline.py
.dlt/: secrets.toml
.github/workflows/: deploy_flows.yaml
data/: data_sources.md
data/Geographic Data/: VTD_TX_Demographics.csv
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/seeds/: __sources.yml  call_to_action_committee_membership_filters.csv  committee_membership.csv  election_results.csv  legislators.csv  rep_sen_contact_sheet.csv
dbt/tests/: __schema.yml  tracker_contains_continuous_rows.sql
extract/: extract_functions.py  get_seeds.py  pull_election_data.py  texas_leg_data_pipeline.py  upload_to_google_sheets.py  utils.py
misc/: equality_texas_bills.csv  pull_equality_texas_data.py  pull_voting_rights_bill_tags.py  rank_partisanship.ipynb
models/: calendar.py  chamber.py  subcalendar.py
models/bills/: bills.sql  schema.yaml
models/marts/: __models.yml  __sources.yml  bills_by_hearing_date.sql  blue_action_data.sql  final.sql  house_bills_by_hearing_date.sql  house_bills_past_committee.sql  house_tracker.sql  senate_bills_by_hearing_date.sql  senate_joint_resolution_tracker.sql  senate_tracker.sql  tracker.sql
models/staging/: __models.yml  __sources.yml  stg_authors.sql  stg_bill_stages.sql  stg_bills.sql  stg_committee_hearing_videos.sql  stg_committee_meeting_bills.sql  stg_committee_meetings.sql  stg_committees.sql  stg_companions.sql  stg_links.sql  stg_subjects.sql  stg_upcoming_committee_meeting_bills.sql  stg_upcoming_committee_meetings.sql  stg_versions.sql
parsers/calendars/: __init__.py  calendar_parser.py  house_calendar_parser.py
pipelines/flows/: campaign_finance_data.py  custom_gsheets.py  deploy_flows.py  extract_functions.py  gsheets_exports.yaml  healthcheck.py  pull_legiscan_data.py  pull_precinct_results.py  run_pipeline.py  test1.py  tx-leg.py  tx_leg.py  upload_dev_tables_to_sheets.py  utils.py
pipelines/printables/: call2action.py  call2action_template.html
pipelines/utils/: utils.py
scraper/: data_structure_planning.md  scraper_config.yaml  scraper_utils.py  test_leg_api_scraper.ipynb  test_scraper.ipynb  texas_leg_data_pipeline.py  texas_leg_scraper.py  utils.py
tests/: __init__.py  conftest.py  test_flows.py  test_house_calendar_parser.py  test_scrapers.py  test_utils.py  tracker_contains_duplicates.sql
(+105 files in other folders)
