[project]
name = "texas_leg_scraper"  # Change to your project name
version = "0.1.0"
description = "Texas Legislature Data Pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-secret-manager>=2.23.2",
    "google-cloud-bigquery>=3.11.4",
    "pandas>=2.0.0",
    "parsons",
    "prefect>=3.2.15",
    "prefect-gcp>=0.6.4",
    "pydantic-core>=2.33.0",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=4.1.0",
    "uv>=0.6.10",
]
lint = [
    "ruff>=0.11.2",
]

[tool.uv.sources]
parsons = { git = "https://github.com/move-coop/parsons.git", rev = "main" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []