[project]
name = "sparkflow"  
version = "0.1.0"
description = "Primary codebase for tx_spark data pipelines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-secret-manager>=2.23.2",
    "google-cloud-bigquery>=3.11.4",
    "pandas>=2.0.0",
    "prefect>=3.2.15",
    "prefect-gcp>=0.6.4",
    "pydantic-core>=2.33.0",
    "python-dotenv>=1.1.0",
    "duckdb>=1.2.2",
    "pdfplumber>=0.11.6",
    "feedparser>=6.0.11",
    "dbt-bigquery>=1.9.1",
    "pyyaml>=6.0.2",
    "gspread==6.2.0",
    "bs4>=0.0.2",
    "pdfkit>=1.0.0",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=4.1.0",
    "uv>=0.6.10",
]
lint = [
    "ruff>=0.11.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
